# ChessBot

./: .qmlformat.ini  CMakeLists.txt  QmlFormatList.txt
engine/: CMakeLists.txt
engine/include/: BitBoard.h  BitBoard.hpp  Board.h  BoardIndicies.h  BoardIndicies.hpp  Bot.h  Directions.h  Engine.h  Move.h  Piece.h  Piece.hpp  PrecomputedMoves.h  SlidingPieceBitBoards.h  UCICommands.h
engine/src/: BitBoard.cpp  Board.cpp  BoardIndicies.cpp  Bot.cpp  Engine.cpp  Move.cpp  Piece.cpp  main.cpp
tools/: CMakeLists.txt
tools/include/: MagicGenerators.h  MoveGenerators.h
tools/src/: MagicGenerators.cpp  MoveGenerators.cpp  main.cpp
ui/: CMakeLists.txt
ui/include/: BitboardsModel.h  BoardModel.h  DebugPanel.h  PieceModel.h  SettingsPanel.h
ui/qml/: BitboardDisplays.qml  Board.qml  DebugPanel.qml  SettingsPanel.qml  main.qml
ui/src/: BitboardsModel.cpp  BoardModel.cpp  DebugPanel.cpp  SettingsPanel.cpp  main.cpp
